# TPIoT.Server

./: CMakeLists.txt  main.cpp
2.0.11_1/: INSTALL_RECEIPT.json
2.0.11_1/.brew/: sdl_ttf.rb
2.0.15/: INSTALL_RECEIPT.json
include/: Client.h  Point.h  Server.h  TPViewWindow.h
lib/cmake/SDL2/: FindSDL2TTF.cmake
src/: Client.cpp  Point.cpp  Server.cpp  TPViewWindow.cpp
